option(USE_EXPERIMENTAL_BUILDING_GEOMETRY_GENERATOR "Use experimental code to generate procedural building 3d geometry" OFF)
if(USE_EXPERIMENTAL_BUILDING_GEOMETRY_GENERATOR)
	set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS USE_EXPERIMENTAL_BUILDING_GEOMETRY_GENERATOR)
endif(USE_EXPERIMENTAL_BUILDING_GEOMETRY_GENERATOR)
add_subdirectory(core)
add_subdirectory(vtosg)